--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <div id="primera_seccion" class="primera_seccion">
         <div id="textos_Primera_seccion" class="textos_Primera_seccion">
             <img class="logo_responsive" src="Captura de pantalla 2024-02-18 144952-Photoroom.png-Photoroom-Photoroom.png-Photoroom (1).png" alt="">
-            <h1 class="titulo_primera_seccion">BAJAR DE PESO NO TIENE QUE SER UNA TORTURA</h1>
-            <h2>Consigue tu “dieta” sin sabor a dieta.</h2>
+            <h1 class="titulo_primera_seccion">LOGRA TU PESO IDEAL SIN TORTURA</h1>
+            <h2>Descubre un camino hacia un cuerpo saludable y feliz sin sufrir</h2>
             <div class="container_imagen_responsive_primera_pagina">
                 <img id="imagen_responsive_primera_seccion" src="img/2003758018.jpg" alt="">
             </div>
@@ -71,20 +71,19 @@
                 <a href="https://cursosnutricion.org/" target="_blank" class="cta_primera_pagina"
                     id="boton_cursos">CURSOS ONLINE</a>
             </div>
+            <p id="parrafo_aparece_en">APARECE EN:</p>
+            <div class="aparece_en">
+                <img src="icono/24horas.jpg" alt="" srcset="">
+                <img src="icono/ATV.png" alt="" srcset="">
+                <img src="icono/RPP.png" alt="" srcset="">
+                <img src="icono/tvpe.png" alt="" srcset="">
+            </div>
             <p></p>
         </div>
         <div id="banner" class="banner">
             <img src="foto_recorte_perfil.jpg" alt="">
         </div>
     </div>
-    <p id="parrafo_aparece_en">APARECE EN:</p>
-    <div class="aparece_en">
-        <img src="icono/24horas.jpg" alt="" srcset="">
-        <img src="icono/ATV.png" alt="" srcset="">
-        <img src="icono/RPP.png" alt="" srcset="">
-        <img src="icono/tvpe.png" alt="" srcset="">
-    </div>
-
     <div id="segunda_seccion" class="segunda_seccion">
         <h2>¿SABÍAS QUE?</h2>
         <p class="parrafo">El sobrepeso es causado por una mala alimentación que también provoca otros trastornos comunes como el acné, caída del cabello, artritis, cáncer, diabetes, insomnio, etc. <br>
@@ -247,11 +246,10 @@
     <div id="octava_seccion" class="octava_seccion">
         <div id="subtitulo_octava_seccion" class="subtitulo_octava_seccion">
             <h2>AGENDA UNA CONSULTA<br>DE 1 HORA CONMIGO</h2>
-            <p class="parrafo">Estoy muy emocionada de ser tu nutricionista. <br>Recuerda, esto se trata de ti. Quiero
-                ayudarte a convertirte en la persona más sana y feliz del mundo. Es hora de empezar a trabajar juntos
-                para conseguir este objetivo <br>
+            <p class="parrafo">Estoy emocionada de ser tu nutricionista. <br>Recuerda, todo se trata de ti. Mi meta es ayudarte a convertirte en la persona más saludable y feliz posible. Es el momento de comenzar nuestro trabajo conjunto para alcanzar este objetivo. <br>
 
-                Una vez empezado el proceso, haremos una serie de controles de aproximadamente 30 minutos. </p>
+                Una vez iniciado el proceso, llevaremos a cabo una serie de controles, cada uno con una duración aproximada de 30 minutos.</p>
+                
 
         </div>
         <div id="container_calendario_boton" class="containerBotones_octava_pagina">
@@ -333,11 +331,11 @@
 
     <div id="footer" class="footer">
         <div class="contactos">
-            <a href="https://www.instagram.com/bajadepesoya_geraldinemaurer/reels/" target="_blank"><img
+            <a href="#" target="_blank"><img
                     src="icono/instagram (1).png" alt="" srcset=""></a>
-            <a href="https://www.facebook.com/Anchoveta" target="_blank"><img src="icono/facebook (1).png" alt=""
+            <a href="#" target="_blank"><img src="icono/facebook (1).png" alt=""
                     srcset=""></a>
-            <a href="https://www.tiktok.com/@geraldinemaurer" target="_blank"><img src="icono/tik-tok (2).png" alt=""
+            <a href="#" target="_blank"><img src="icono/tik-tok (2).png" alt=""
                     srcset=""></a>
         </div>
         <div class="div_menu" id="menu_footer">
