--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h1 class="titulo_primera_seccion">LOGRA TU PESO IDEAL SIN TORTURA</h1>
             <h2>Descubre un camino hacia un cuerpo saludable y feliz sin sufrir</h2>
             <div class="container_imagen_responsive_primera_pagina">
-                <img id="imagen_responsive_primera_seccion" src="img/2003758018.jpg" alt="">
+                <img id="imagen_responsive_primera_seccion" src="foto_recorte_perfil.jpg" alt="">
             </div>
             <div id="containerBotones" class="containerBotones">
                 <a href="#" class="scroll-link cta_primera_pagina" data-scroll-target="#calendario">AGENDA UNA
