--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                 src="Captura de pantalla 2024-02-18 144952-Photoroom.png-Photoroom-Photoroom.png-Photoroom (1).png"
                 alt="">
             <h1 class="titulo_primera_seccion">LOGRA TU PESO IDEAL SIN TORTURA</h1>
-            <h2>Descubre un camino hacia un cuerpo saludable y feliz sin sufrir</h2>
+            <h2>
+                Embárcate en un camino hacia un cuerpo saludable y feliz, sin sufrir. Adopta hábitos equilibrados y ejercicios adaptados, experimentando una transformación integral para alcanzar un bienestar duradero en todos los aspectos de tu vida.</h2>
             <div class="container_imagen_responsive_primera_pagina">
                 <img id="imagen_responsive_primera_seccion" src="foto_recorte_perfil.jpg" alt="">
             </div>
