--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div id="primera_seccion" class="primera_seccion">
         <div id="textos_Primera_seccion" class="textos_Primera_seccion">
             <img class="logo_responsive"
-                src="Captura de pantalla 2024-02-18 144952-Photoroom.png-Photoroom-Photoroom.png-Photoroom (1).png"
+                src="logo_responsive_the_nutritionist-Photoroom.png-Photoroom.png"
                 alt="">
             <h1 class="titulo_primera_seccion">LOGRA TU PESO IDEAL SIN TORTURA</h1>
             <h2>
