--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descripción de tu sitio web">
+    <meta name="description" content="Te amo mamol">
     <link rel="stylesheet" href="style.css">
     <script src="unpkg.com_scrollreveal@4.0.9_dist_scrollreveal.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
